clusters/dev.tentonpenguin.co.uk/addons/kube-ingress-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: kube-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: ingress-lb-traefik
    kubernetes.io/cluster-service: "true"
spec:
  template:
    metadata:
      labels:
        k8s-app: kube-ingress-lb-traefik
        name: kube-ingress-lb-traefik
        kubernetes.io/cluster-service: "true"
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: docker.io/traefik
        name: ingress-lb-traefik
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 8080
          hostPort: 3128
        args:
        - --web
        - --kubernetes
        - --logLevel=ERROR
