clusters/dev.tentonpenguin.co.uk/addons/kubernetes-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  labels:
    app: kubernetes-dashboard
    kubernetes.io/cluster-service: "true"
spec:
  rules:
  - host: dev.tentonpenguin.co.uk
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
